# helios

./: .editorconfig  .env.example  .gitignore  .gitmodules  CLAUDE.md  DESIGN.md  Helios.md  LICENSE  README.md  TODO.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/workflows/: ci.yml  external-contributor-smoke.yml  phase3-e2e.yml  publish-sdk-testpypi.yml  release-wheels.yml  security.yml
circuits/: Makefile  hello.circom  mean_reversion_v1.circom  momentum_v1.circom  package-lock.json  package.json  yield_rotation_v1.circom
circuits/ptau/: README.md
circuits/scripts/: bench-momentum.js  check_constraints.sh  gen-fixture-mr.js  gen-fixture-yr.js  gen-fixture.js  verify-hello.js
circuits/test/: mean_reversion_v1.test.js  momentum_v1.test.js  yield_rotation_v1.test.js
contracts/: .gitignore  foundry.toml  mythril.solc.json  slither.config.json
contracts/deployments/: arbitrum-sepolia.json  base-sepolia.json  deploy-phase3-test-registers.json  kite-testnet.json
contracts/script/: CommitVerifierRotation.s.sol  CompleteCutoverFinish.s.sol  DeactivateLegacyVaults.s.sol  Deploy.s.sol  DeployArbitrumSepolia.s.sol  DeployBaseSepolia.s.sol  (+40 more)
deploy/: README.md  bootstrap.sh  docker-compose.prod.yml  ecosystem.config.cjs  env.prod.example  postgres-backup.sh  setup-tls.sh  vercel-notes.md
docs/: active-strategies.md  agentic-workflow.md  allocator-guide.md  audit-checklist.md  circuit-specs.md  cold-start.md  cross-chain-cost-roadmap.md  dead-code-cleanup-plan.md  demo-runbook.md  demo-script.md  deployment-strategy.md  helios-v1-acceptance.md  kite-passport-integration.md  kite-passport-notes.md  local-testing.md  operator-guide.md  phase-3-deploy-plan.md  phase-3-review.md  phase-5-review.md  phase1-plan.md  phase2-plan.md  phase2-review-followup.md  phase2-review.md  phase3-plan.md  phase4-acceptance.md  phase4-plan.md  phase5-acceptance.md  phase5-plan.md  phase5-xchain-verification.md  phase6-acceptance.md  phase6-circuit-rotation-runbook.md  phase6-plan.md  phase6-realprice-plan.md  pitch-deck.md  post-demo-tav-restore.md  reputation-math.md  reputation-v1-v2-cutover.md  submission.md  threat-model.md  wallet-inventory.md
frontend/: next.config.mjs  package.json  playwright.config.ts  process-shim.cjs  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
reference-strategies/llm_momentum_v1/: README.md  pyproject.toml
reference-strategies/llm_momentum_v1/src/llm_momentum_v1/: __init__.py  __main__.py  oracle_client.py  runtime.py  service.py  strategy.py  witness.py
reference-strategies/llm_momentum_v1/tests/: test_strategy.py
reference-strategies/mean_reversion_v1/: pyproject.toml
reference-strategies/mean_reversion_v1/src/mean_reversion_v1/: __init__.py  __main__.py  executor.py  oracle_client.py  prover_client.py  runtime.py  service.py  strategy.py  witness.py
reference-strategies/mean_reversion_v1/tests/: test_runtime.py  test_strategy.py  test_witness.py
reference-strategies/yield_rotation_v1/: pyproject.toml
reference-strategies/yield_rotation_v1/src/yield_rotation_v1/: __init__.py  __main__.py  aave_v3.py  executor.py  merkle.py  oracle_client.py  prover_client.py  runtime.py  service.py  strategy.py  types.py  witness.py
reference-strategies/yield_rotation_v1/tests/: test_aave_v3_calldata.py  test_merkle.py  test_runtime.py  test_strategy.py  test_witness.py
scenarios/: _generate_phase2.py  phase1-drawdown.json  phase2-multi-class.json  phase3-divergence.py
scripts/: _phase2_oracle_nav.py  _phase2_reputation_local.py  _phase2_witness.py  e2e-base-trio-smoke.sh  e2e-phase3.sh  e2e-scenario-phase2.sh  e2e-scenario.sh  e2e_base_trio_smoke.py  e2e_phase6_realprice.py  e2e_scenario.py  e2e_scenario_phase2.py  kite-passport-smoke.mjs  measure_xchain_latency.py  preflight-phase5.sh  verify-trade.js  verify_phase2_anchors.py
services/_template/: alembic.ini  pyproject.toml
services/_template/migrations/: env.py
services/_template/src/_template/: __init__.py  app.py  config.py  db.py  logging.py  models.py  web3_consts.py
services/bot/: pyproject.toml
services/bot/src/bot/: __init__.py  __main__.py  service.py
services/helix/: pyproject.toml
services/helix/src/helix/: __init__.py  __main__.py  allocator.py  service.py
services/helix/tests/: test_allocator.py  test_service.py
services/oracle/: pyproject.toml
services/oracle/scripts/: package.json  poseidon_helper.js
services/oracle/src/oracle/: __init__.py  __main__.py  anchor.py  commit_mirror.py  poller.py  poseidon.py  router_mirror.py  router_mirror_math.py  service.py  signer.py  state.py  yield_state.py
services/oracle/src/oracle/sources/: __init__.py  algebra.py  base.py  binance.py  coingecko.py  scenario.py  yield_aave_stub.py  yield_base.py  yield_compound_stub.py
services/oracle/tests/: test_anchor.py  test_poseidon_chain.py  test_router_mirror.py  test_router_mirror_gate.py  test_router_mirror_math.py  test_scenario_source.py  test_service.py  test_signer.py  test_state.py  test_yield_endpoint.py  test_yield_sources.py  test_yield_state.py
services/reputation/: pyproject.toml
services/reputation/src/reputation/: __init__.py  __main__.py  anchor.py  cohort.py  engine.py  goldsky.py  score.py  service.py  signer.py  windows.py
services/reputation/tests/: test_anchor.py  test_anchor_allocator.py  test_cohort.py  test_engine.py  test_engine_allocator.py  test_engine_dedup.py  test_goldsky_allocator_parse.py  test_score.py  test_score_822.py  test_service.py  test_signer.py  test_windows.py
services/sentinel/: pyproject.toml
services/sentinel/src/sentinel/: __init__.py  __main__.py  allocator.py  auth.py  chain_watch.py  goldsky.py  loop.py  onchain.py  schemas.py  service.py  state.py
services/sentinel/tests/: test_allocator.py  test_auth.py  test_chain_watch.py  test_loop.py  test_onchain.py  test_phase5_xchain.py  test_service.py
subgraph/: .gitignore  README.md  networks.json  package.json  schema.graphql  subgraph.arbitrum-sepolia.yaml  subgraph.base-sepolia.yaml  subgraph.yaml
(+278 files in other folders)
