[project]
name = "helios-workspace"
version = "0.1.0"
description = "Helios monorepo workspace root (non-publishable)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

# Keep the root project empty — all code lives in members.
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pyright>=1.1",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[tool.uv]
managed = true
package = false
default-groups = ["dev"]

[tool.uv.workspace]
members = [
    "packages/strategy-sdk",
    "packages/allocator-sdk",
    "packages/helios-cli",
    "packages/contracts-abi-py",
    "services/_template",
    "services/sentinel",
    "services/helix",
    "services/reputation",
    "services/oracle",
    "services/bot",
    "reference-strategies/momentum_v1",
    "reference-strategies/mean_reversion_v1",
    "reference-strategies/yield_rotation_v1",
]

[tool.uv.sources]
helios-strategy-sdk = { workspace = true }
helios-allocator-sdk = { workspace = true }
helios-trader-cli = { workspace = true }
helios-contracts-abi = { workspace = true }
helios-service-template = { workspace = true }
helios-sentinel = { workspace = true }
helios-helix = { workspace = true }
helios-reputation = { workspace = true }
helios-oracle = { workspace = true }
helios-bot = { workspace = true }
helios-reference-momentum-v1 = { workspace = true }
helios-reference-mean-reversion-v1 = { workspace = true }
helios-reference-yield-rotation-v1 = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    "**/__pycache__",
    "**/.venv",
    "contracts",
    "circuits",
    "frontend",
    "subgraph",
    # Auto-generated from Foundry artifacts; codegen owns the style.
    "packages/contracts-abi-py/src/helios_contracts_abi/abis.py",
    # Vendored circomlibpy (MIT) — keep upstream code untouched so we
    # can sync future bumps cleanly.
    "packages/strategy-sdk/src/helios/_vendor/**",
]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "SIM", "PL", "RUF"]
ignore = [
    "PLR0913",  # too many args — not useful for config classes
    "PLR2004",  # magic numbers — fine for BPS constants etc
    "RUF001",   # ambiguous unicode in strings (× / − in user-facing print + log lines)
    "RUF002",   # ambiguous unicode in docstrings (en-dash in specs)
    "RUF003",   # ambiguous unicode in comments
]

[tool.ruff.lint.per-file-ignores]
# Typer's documented idiom requires function-call defaults.
"packages/helios-cli/**/*.py" = ["B008"]
# Alembic uses its own migrations DSL.
"services/*/migrations/*.py" = ["E402", "F401"]
# E2E scripts: top-level import order is dictated by sys.path manipulation
# (workspace package discovery) and we deliberately keep heavy imports
# function-local for fast startup of CLI subcommands.
"scripts/**/*.py" = ["E402", "PLC0415"]
"scenarios/**/*.py" = ["RUF046"]
# Mean-reversion signal logic is a flat decision tree (long-entry, short-entry,
# stop-loss, mean re-cross, no-op) — early returns are clearer than nesting.
"reference-strategies/mean_reversion_v1/src/mean_reversion_v1/strategy.py" = ["PLR0911"]
# Chain-watch decoder is a flat dispatcher over event names — restructuring
# into a lookup table would hurt readability without changing behavior.
"services/sentinel/src/sentinel/chain_watch.py" = ["PLR0911"]
# Oracle Settings holds the full env-var surface area for the service —
# intentional length, not a refactor target.
"services/oracle/src/oracle/service.py" = ["PLR0915"]
# Test files often inline imports inside the test for clarity over a
# cross-test side-effect when one test exercises an optional dependency.
"reference-strategies/**/tests/*.py" = ["PLC0415"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
include = ["packages", "services", "reference-strategies"]
exclude = [
    "**/__pycache__",
    "**/.venv",
    "**/node_modules",
    # Vendored circomlibpy (MIT) — see ruff `extend-exclude` for rationale.
    "packages/strategy-sdk/src/helios/_vendor/**",
]
pythonVersion = "3.11"
typeCheckingMode = "standard"
reportMissingImports = "error"
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["packages", "services", "reference-strategies"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
addopts = ["--import-mode=importlib"]
