[project]
name = "helios-reference-llm-momentum-v1"
version = "0.1.0"
description = "LLM-driven momentum_v1 reference strategy. Claude decides; the Helios chain enforces bounds via Groth16 + on-chain paramsHash."
requires-python = ">=3.11"
dependencies = [
    # NOTE: `helios-service-template` is intentionally NOT a runtime dep —
    # it's a workspace-internal FastAPI scaffold imported lazily by
    # `service.py`. PyPI installs that import the strategy/runtime
    # directly do not need it. See momentum_v1/pyproject.toml for the
    # equivalent split.
    "helios-strategy-sdk",
    "helios-contracts-abi",
    "anthropic>=0.40.0",
    "eth-account>=0.13",
    "eth-utils>=4.1",
    "httpx>=0.27",
    "structlog>=24.4",
    "web3>=7.4",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24", "ruff>=0.8", "pyright>=1.1"]
service = ["helios-service-template"]

[project.scripts]
llm-momentum-v1 = "llm_momentum_v1.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_momentum_v1"]
