[project]
name = "helios-bot"
version = "0.1.0"
description = "@helios_market_bot — text-forward Telegram pings on allocator events. See DESIGN.md §15."
requires-python = ">=3.11"
dependencies = [
    "helios-service-template",
    "python-telegram-bot>=21.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24", "ruff>=0.8", "pyright>=1.1"]

[project.scripts]
bot = "bot.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bot"]
