[project]
name = "helios-helix"
version = "0.1.0"
description = "Helios Helix — second reference allocator, built ground-up on the AllocatorSDK. Correlation-aware, regime-adaptive."
requires-python = ">=3.11"
dependencies = [
    "helios-service-template",
    "helios-allocator-sdk",
    "numpy>=2.0",
    "pandas>=2.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24", "ruff>=0.8", "pyright>=1.1"]

[project.scripts]
helix = "helix.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/helix"]
