[project]
name = "helios-oracle"
version = "0.1.0"
description = "Helios price + yield oracle. Signs 1-minute snapshots, Poseidon-committed chain. Phase 0: skeleton."
requires-python = ">=3.11"
dependencies = [
    "helios-service-template",
    "eth-account>=0.13",
    "eth-utils>=4.1",
    "httpx>=0.27",
    "structlog>=24.4",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24", "ruff>=0.8", "pyright>=1.1"]

[project.scripts]
oracle = "oracle.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oracle"]
